Adding support for JUnit 5 and extra test modules